syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";


service BillingService{
 rpc createBillingAccount(BillingRequest) returns (BillingResponse);
}

message BillingRequest{
 string learnerId = 1;
 string name = 2;
 string emailId = 3;
}

message BillingResponse{
  string accountId = 1;
  string accountStatus = 2;
}